--- a/alvin_MMR_oligo_generator.ipynb
+++ b/alvin_MMR_oligo_generator.ipynb
@@ -28,7 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "import Bio.Seq\n",
     "import warnings\n",
-    "import pegg\n",
+    "import pegg_updated\n",
     "import gffutils\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -43,7 +43,7 @@
     "#and genome annotations\n",
     "\n",
     "filepath = '/Users/samgould/Desktop/FSR Lab/reference files/GRCh37/ncbi-genomes-2022-03-17/GCF_000001405.25_GRCh37.p13_genomic.fna.gz'\n",
-    "records, index_list = pegg.genome_loader(filepath)\n",
+    "records, index_list = pegg_updated.genome_loader(filepath)\n",
     "\n",
     "file = '/Users/samgould/Desktop/FSR Lab/reference files/gencode_v19.db'\n",
     "db = gffutils.FeatureDB(file)"
