--- a/pegg2.ipynb
+++ b/pegg2.ipynb
@@ -418,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pegg\n",
+    "import pegg_updated\n",
     "import gffutils"
    ]
   },
@@ -430,7 +430,7 @@
    "source": [
     "filepath = '/Users/samgould/Desktop/FSR Lab/reference files/GRCh37/ncbi-genomes-2022-03-17/GCF_000001405.25_GRCh37.p13_genomic.fna.gz'\n",
     "\n",
-    "records, index_list = pegg.genome_loader(filepath)"
+    "records, index_list = pegg_updated.genome_loader(filepath)"
    ]
   },
   {
