--- a/pegg_update.ipynb
+++ b/pegg_update.ipynb
@@ -19,7 +19,7 @@
     "import pegg_updated\n",
     "import pegg\n",
     "import pandas as pd\n",
-    "import Bio.Seq"
+    "import Bio.Seq\n"
    ]
   },
   {
@@ -2092,9 +2092,10 @@
     "import Bio.Seq\n",
     "\n",
     "class mutation:\n",
-    "    def __init__(self, forward_sequence, mut_forward_sequence, seq_start=0, seq_end=None, chrom=None, genome=None):\n",
+    "    def __init__(self, forward_sequence, mut_forward_sequence, chrom=None, genome=None):\n",
     "        \"\"\" \n",
     "        change seq_start and seq_end to correspond with chromosome coordinates\n",
+    "        or some other organizational method...\n",
     "        \"\"\"\n",
     "        \n",
     "        #WT sequence\n",
@@ -2104,8 +2105,8 @@
     "        self.rev_comp_sequence = rc\n",
     "\n",
     "        #seq start refers to the WIDE sequence start (i.e. the WT sequence with e.g. 60 nt of context)\n",
-    "        self.seq_start = seq_start\n",
-    "        self.seq_end = seq_end\n",
+    "        self.seq_start = 0\n",
+    "        self.seq_end = len(self.forward_sequence)\n",
     "        self.chrom = chrom\n",
     "        self.genome_build = genome\n",
     "\n",
@@ -2114,7 +2115,7 @@
     "        rc_mut = str(Bio.Seq.Seq(self.mut_forward_sequence).reverse_complement())\n",
     "        self.mut_rev_comp_sequence = rc_mut\n",
     "\n",
-    "        self.\n",
+    "        self.variant_type = \n",
     "        \n",
     "\n",
     "        #information about the PAM sequence location\n",
