Safe targeting/non-targeting guides

--- a/gRNA_prediction.ipynb
+++ b/gRNA_prediction.ipynb
@@ -97,49 +97,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcAziScore(seqs):\n",
-    "    \" the official implementation of the Doench2016 (aka Fusi) score from Microsoft \"\n",
-    "    import numpy\n",
-    "    import azimuth.model_comparison\n",
-    "    res = []\n",
-    "    for seq in seqs:\n",
-    "        if \"N\" in seq:\n",
-    "            res.append(-1) # can't do Ns\n",
-    "            continue\n",
-    "\n",
-    "        pam = seq[25:27]\n",
-    "        # pam_audit = do not check for NGG PAM\n",
-    "        seq = seq.upper()\n",
-    "        score = azimuth.model_comparison.predict(numpy.array([seq]), None, None, pam_audit=False)[0]\n",
-    "        res.append(int(round(100*score)))\n",
-    "    return res"
+    "import crisporEffScores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'azimuth.model_comparison'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/5g/xxjcy2g531n02hnyb6d8qdsr0000gn/T/ipykernel_87206/2468819190.py\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mseqs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'AGATTCTTGCTCACCGTCTG'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcalcAziScore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseqs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/5g/xxjcy2g531n02hnyb6d8qdsr0000gn/T/ipykernel_87206/1747550219.py\u001b[0m in \u001b[0;36mcalcAziScore\u001b[0;34m(seqs)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m\" the official implementation of the Doench2016 (aka Fusi) score from Microsoft \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mimport\u001b[0m \u001b[0mazimuth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_comparison\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mseq\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseqs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'azimuth.model_comparison'"
-     ]
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "seqs = ['AGATTCTTGCTCACCGTCTG']\n",
-    "calcAziScore(seqs)"
+    "len('AGATTCTTGCTCACCGTCTGTGG') #3 extra on the PAM side; 4 extra on protospacer side"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[58]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seqs = ['AGAGAGATTCTTGCTCACCGTCTGTGGAGA']\n",
+    "crisporEffScores.calcAziScore(seqs)"
    ]
   },
   {
