--- a/PEGG2_REAL.ipynb
+++ b/PEGG2_REAL.ipynb
@@ -17606,8 +17606,21 @@
    "source": [
     "mutant_input = impact \n",
     "gene_name = 'TP53'\n",
+    "chrom = 17\n",
+    "strand = '-'\n",
+    "start_end_cds = [[7572930, 7573008],\n",
+    "[7573927, 7574033],\n",
+    "[7576853, 7576926],\n",
+    "[7577019, 7577155],\n",
+    "[7577499, 7577608],\n",
+    "[7578177, 7578289],\n",
+    "[7578371, 7578554],\n",
+    "[7579312, 7579590],\n",
+    "[7579700, 7579721],\n",
+    "[7579839, 7579912]]\n",
     "\n",
-    "l = library.library_maker(mutant_input, gene_name, chrom_dict, fraction_safetarget=0.05,organism='human')"
+    "l = library.library_maker(mutant_input, gene_name, chrom_dict, fraction_safetarget=0.05,fraction_silent = .5, organism='human',\n",
+    "                          start_end_cds = start_end_cds, chrom=chrom, strand=strand)"
    ]
   },
   {
@@ -17617,372 +17630,9 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Hugo_Symbol</th>\n",
-       "      <th>Entrez_Gene_Id</th>\n",
-       "      <th>Center</th>\n",
-       "      <th>NCBI_Build</th>\n",
-       "      <th>Chromosome</th>\n",
-       "      <th>Start_Position</th>\n",
-       "      <th>End_Position</th>\n",
-       "      <th>Strand</th>\n",
-       "      <th>Consequence</th>\n",
-       "      <th>Variant_Classification</th>\n",
-       "      <th>...</th>\n",
-       "      <th>all_effects</th>\n",
-       "      <th>amino_acid_change</th>\n",
-       "      <th>cDNA_Change</th>\n",
-       "      <th>cDNA_position</th>\n",
-       "      <th>cdna_change</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>n_depth</th>\n",
-       "      <th>t_depth</th>\n",
-       "      <th>transcript</th>\n",
-       "      <th>classification</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>7157.0</td>\n",
-       "      <td>MSKCC</td>\n",
-       "      <td>GRCh37</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7577120</td>\n",
-       "      <td>7577120</td>\n",
-       "      <td>+</td>\n",
-       "      <td>missense_variant</td>\n",
-       "      <td>Missense_Mutation</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>variant</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>7157.0</td>\n",
-       "      <td>MSKCC</td>\n",
-       "      <td>GRCh37</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7577108</td>\n",
-       "      <td>7577108</td>\n",
-       "      <td>+</td>\n",
-       "      <td>missense_variant</td>\n",
-       "      <td>Missense_Mutation</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>variant</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>7157.0</td>\n",
-       "      <td>MSKCC</td>\n",
-       "      <td>GRCh37</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7578239</td>\n",
-       "      <td>7578239</td>\n",
-       "      <td>+</td>\n",
-       "      <td>stop_gained</td>\n",
-       "      <td>Nonsense_Mutation</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>variant</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>7157.0</td>\n",
-       "      <td>MSKCC</td>\n",
-       "      <td>GRCh37</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7577121</td>\n",
-       "      <td>7577121</td>\n",
-       "      <td>+</td>\n",
-       "      <td>missense_variant</td>\n",
-       "      <td>Missense_Mutation</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>variant</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>MSKCC</td>\n",
-       "      <td>37</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7576862</td>\n",
-       "      <td>7576863</td>\n",
-       "      <td>+</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>frameshift_deletion</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>variant</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3471</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>126012555</td>\n",
-       "      <td>126012555</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>safe-targeting control</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3472</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>127902931</td>\n",
-       "      <td>127902931</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>safe-targeting control</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3473</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>134607114</td>\n",
-       "      <td>134607114</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>safe-targeting control</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3474</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>144774590</td>\n",
-       "      <td>144774590</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>safe-targeting control</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3475</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X</td>\n",
-       "      <td>145195279</td>\n",
-       "      <td>145195279</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>safe-targeting control</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3476 rows × 124 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Hugo_Symbol  Entrez_Gene_Id Center NCBI_Build Chromosome  Start_Position  \\\n",
-       "0           TP53          7157.0  MSKCC     GRCh37         17         7577120   \n",
-       "1           TP53          7157.0  MSKCC     GRCh37         17         7577108   \n",
-       "2           TP53          7157.0  MSKCC     GRCh37         17         7578239   \n",
-       "3           TP53          7157.0  MSKCC     GRCh37         17         7577121   \n",
-       "4           TP53             0.0  MSKCC         37         17         7576862   \n",
-       "...          ...             ...    ...        ...        ...             ...   \n",
-       "3471         NaN             NaN    NaN        NaN          X       126012555   \n",
-       "3472         NaN             NaN    NaN        NaN          X       127902931   \n",
-       "3473         NaN             NaN    NaN        NaN          X       134607114   \n",
-       "3474         NaN             NaN    NaN        NaN          X       144774590   \n",
-       "3475         NaN             NaN    NaN        NaN          X       145195279   \n",
-       "\n",
-       "      End_Position Strand       Consequence Variant_Classification  ...  \\\n",
-       "0          7577120      +  missense_variant      Missense_Mutation  ...   \n",
-       "1          7577108      +  missense_variant      Missense_Mutation  ...   \n",
-       "2          7578239      +       stop_gained      Nonsense_Mutation  ...   \n",
-       "3          7577121      +  missense_variant      Missense_Mutation  ...   \n",
-       "4          7576863      +               NaN    frameshift_deletion  ...   \n",
-       "...            ...    ...               ...                    ...  ...   \n",
-       "3471     126012555    NaN               NaN                    NaN  ...   \n",
-       "3472     127902931    NaN               NaN                    NaN  ...   \n",
-       "3473     134607114    NaN               NaN                    NaN  ...   \n",
-       "3474     144774590    NaN               NaN                    NaN  ...   \n",
-       "3475     145195279    NaN               NaN                    NaN  ...   \n",
-       "\n",
-       "     all_effects amino_acid_change cDNA_Change cDNA_position cdna_change  \\\n",
-       "0            NaN               NaN         NaN           NaN         NaN   \n",
-       "1            NaN               NaN         NaN           NaN         NaN   \n",
-       "2            NaN               NaN         NaN           NaN         NaN   \n",
-       "3            NaN               NaN         NaN           NaN         NaN   \n",
-       "4            NaN               NaN         NaN           NaN         NaN   \n",
-       "...          ...               ...         ...           ...         ...   \n",
-       "3471         NaN               NaN         NaN           NaN         NaN   \n",
-       "3472         NaN               NaN         NaN           NaN         NaN   \n",
-       "3473         NaN               NaN         NaN           NaN         NaN   \n",
-       "3474         NaN               NaN         NaN           NaN         NaN   \n",
-       "3475         NaN               NaN         NaN           NaN         NaN   \n",
-       "\n",
-       "      comments n_depth  t_depth  transcript          classification  \n",
-       "0          NaN     NaN      NaN         NaN                 variant  \n",
-       "1          NaN     NaN      NaN         NaN                 variant  \n",
-       "2          NaN     NaN      NaN         NaN                 variant  \n",
-       "3          NaN     NaN      NaN         NaN                 variant  \n",
-       "4          NaN     NaN      NaN         NaN                 variant  \n",
-       "...        ...     ...      ...         ...                     ...  \n",
-       "3471       NaN     NaN      NaN         NaN  safe-targeting control  \n",
-       "3472       NaN     NaN      NaN         NaN  safe-targeting control  \n",
-       "3473       NaN     NaN      NaN         NaN  safe-targeting control  \n",
-       "3474       NaN     NaN      NaN         NaN  safe-targeting control  \n",
-       "3475       NaN     NaN      NaN         NaN  safe-targeting control  \n",
-       "\n",
-       "[3476 rows x 124 columns]"
+       "(array(['neutral', 'safe-targeting control', 'variant'], dtype=object),\n",
+       " array([ 377,  165, 3311]))"
       ]
      },
      "execution_count": 5,
@@ -17991,35 +17641,30 @@
     }
    ],
    "source": [
-    "l"
+    "import numpy as np\n",
+    "np.unique(l['classification'], return_counts=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in mutant # 179; Dropped from pegRNA generation\n",
-      "Variant Type = INDEL| REF = CGGACGCGGGTGCCGGGCGGGGGTGTGGAATCAACC | ALT = CT\n",
-      "CCAGCCCTGTCGTCTCTCCAGCCCCAGCTGCTCACCATCGCTATCTGAGCAGCGCTCATGGTGGGGGCAGCGCCTCACAACCTCCGTCATGTGCTGTGACTGCTTGTAGATGGCCATGGCGCGGACGCGGGTGCCGGGCGGGGGTGTGGAATCAACCCACAGCTGCACAGGGCAGGTCTTGGCCAGTTGGCAAAACATCTTGTTGAGGGCAGGGGAGTACTGTAGGAAGAGGAAGGAGACAGAGTTGAAAGTCAGGGCACAAGTGAACAGATAAAG\n",
-      "CCAGCCCTGTCGTCTCTCCAGCCCCAGCTGCTCACCATCGCTATCTGAGCAGCGCTCATGGTGGGGGCAGCGCCTCACAACCTCCGTCATGTGCTGTGACTGCTTGTAGATGGCCATGGCCGGACGCGGGTGCCGGGCGGGGGTGTGGAATCAACCCCACAGCTGCACAGGGCAGGTCTTGGCCAGTTGGCAAAACATCTTGTTGAGGGCAGGGGAGTACTGTAGGAAGAGGAAGGAGACAGAGTTGAAAGTCAGGGCACAAGTGAACAGATAAAG\n",
-      "Error in mutant # 384; Dropped from pegRNA generation\n",
-      "Variant Type = INDEL| REF = TGTAGGAGCTGCTGGTGCAGGGGCCACGG | ALT = TACCAGC\n",
-      "AGACTTGGCTGTCCCAGAATGCAAGAAGCCCAGACGGAAACCGTAGCTGCCCTGGTAGGTTTTCTGGGAAGGGACAGAAGATGACAGGGGCCAGGAGGGGGCTGGTGCAGGGGCCGCCGGTGTAGGAGCTGCTGGTGCAGGGGCCACGGGGGGAGCAGCCTCTGGCATTCTGGGAGCTTCATCTGGACCTGGGTCTTCAGTGAACCATTGTTCAATATCGTCCGGGGACAGCATCAAATCATCCATTGCTTGGGACGGCAAGGGGGACTG\n",
-      "AGACTTGGCTGTCCCAGAATGCAAGAAGCCCAGACGGAAACCGTAGCTGCCCTGGTAGGTTTTCTGGGAAGGGACAGAAGATGACAGGGGCCAGGAGGGGGCTGGTGCAGGGGCCGCCGGTGTAGGAGCTGCTGGTGCAGGGGCCACGGGGGAGCAGCCTCTGGCATTCTGGGAGCTTCATCTGGACCTGGGTCTTCAGTGAACCATTGTTCAATATCGTCCGGGGACAGCATCAAATCATCCATTGCTTGGGACGGCAAGGGGGACTG\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_format = 'cBioPortal'\n",
-    "input = l\n",
+    "input = l[:100]\n",
     "\n",
     "\n",
-    "p2 = pegg2.run(input, input_format, chrom_dict,  PAM = 'NGG', sensor_orientation='forward')\n"
+    "p2 = pegg2.run(input, input_format, chrom_dict,  pegRNAs_per_mut=5, PAM = 'NGG', sensor_orientation='reverse-complement')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p3 = pegg2.prime_oligo_generator(p2)"
    ]
   },
   {
@@ -18429,7 +18074,9 @@
     }
    ],
    "source": [
-    "p2[p2['Variant_Type']=='INS']"
+    "p2[p2['Variant_Type']=='INS']\n",
+    "\n",
+    "#sample change"
    ]
   },
   {
@@ -27916,6 +27563,27 @@
    "source": [
     "import pandas as pd\n",
     "impact = pd.read_csv('/Users/samgould/Desktop/FSR Lab/reference files/2020-06-16-MSK-IMPACT_EDITED.txt', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/5g/xxjcy2g531n02hnyb6d8qdsr0000gn/T/ipykernel_22156/597994717.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "len(None)"
    ]
   },
   {
